fix(1): code cleanup